First step in providing functionality necessary in Kexi: 1) Class MultiProperty is introduced. It holds a selection (list) of Properties of the same name, type, etc. PropertyList now operates on MultiProperties instead of usual Propery. From user's point of view this changes nothing. MultiProperties are internal to the library. Users should create objects of Property class and add them to the PropertyList. From internal point of view this allows a lot more flexibility in PropertyEditor. Now list view items know their properties, not just their names (like ones in Kexi property editing library). 2) Editors for QVariant::Date, QVariant::DateTime, FileURL, DirectoryURL, QVariant::Point, QVariant::Rect and QVariant::SizePolicy are introduced. Only Pixmap and Cursor remain uminplemented. 3) Now children properties can be created (like in Kexi but Property itself doesn't have children, only MultiProperty has children which are created by PropertyMachineFactory). This design differs from what I see in Kexi but it's the good way to simplify Property class and still provide the ability to intersect properties and display results of intersection in property editor. Point, Size, Rect and SizePolicy types now have children properties.
Huge Interface cleanup:
PropertyOperator and PropertyAccessor classes gone.
PropertyBuffer introduced as the class who doesn't own properties. It is now a subclass of PropertyList. It should be used instead of PropertyAccessor.
PropertyList doesn't have methods to operate on it's properties anymore (like value() and setValue()). Use operator [] to get a property (actually object of class MultiProperty).

Also integrated changes Zack made in kdenonbeta.

Hope this is the last huge API change. Only additions to API are planned, no changes.

CCMAIL: zack@kde.org
CCMAIL: js@iidea.pl

--- a/lib/widgets/propeditor/Makefile.am
+++ b/lib/widgets/propeditor/Makefile.am
@@ -3,7 +3,6 @@ METASOURCES = AUTO
 
 lib_LTLIBRARIES =  libkdevpropertyeditor.la
 libkdevpropertyeditor_la_LDFLAGS = $(all_libraries)
-libkdevpropertyeditor_la_SOURCES = pcheckbox.cpp pdoublenuminput.cpp plineedit.cpp propertyeditor.cpp propertyoperator.cpp pstringlistedit.cpp pcolorcombo.cpp pdummywidget.cpp property.cpp propertylist.cpp propertywidget.cpp psymbolcombo.cpp pcombobox.cpp pfontcombo.cpp propertyaccessor.cpp propertymachinefactory.cpp pspinbox.cpp
-
+libkdevpropertyeditor_la_SOURCES = childproperty.cpp pdateedit.cpp plineedit.cpp propertyeditor.cpp psizeedit.cpp purledit.cpp multiproperty.cpp pdatetimeedit.cpp ppointedit.cpp propertylist.cpp psizepolicyedit.cpp pcheckbox.cpp pdoublenuminput.cpp prectedit.cpp propertymachinefactory.cpp pspinbox.cpp pcolorcombo.cpp pdummywidget.cpp property.cpp pstringlistedit.cpp pcombobox.cpp pfontcombo.cpp propertywidget.cpp psymbolcombo.cpp
 kdevpropeditorincludedir = $(includedir)/kdevelop/propeditor
-kdevpropeditorinclude_HEADERS = pcheckbox.h pdoublenuminput.h plineedit.h propertyeditor.h propertyoperator.h pstringlistedit.h pcolorcombo.h pdummywidget.h property.h propertylist.h propertywidget.h psymbolcombo.h pcombobox.h pfontcombo.h propertyaccessor.h propertymachinefactory.h pspinbox.h
+kdevpropeditorinclude_HEADERS = childproperty.h pcombobox.h pdummywidget.h prectedit.h propertylist.h psizeedit.h psymbolcombo.h multiproperty.h pdateedit.h pfontcombo.h property.h propertymachinefactory.h psizepolicyedit.h purledit.h pcheckbox.h pdatetimeedit.h plineedit.h pspinbox.h pcolorcombo.h pdoublenuminput.h ppointedit.h propertyeditor.h propertywidget.h pstringlistedit.h
