CVS_SILENT made messages

--- a/languages/cpp/app_templates/kbearimportfilter/kbearimportfilter.desktop
+++ b/languages/cpp/app_templates/kbearimportfilter/kbearimportfilter.desktop
@@ -10,14 +10,17 @@ Name[de]=$APPNAME$ Import-Filter
 Name[es]=Filtro de importación de $APPNAME$
 Name[et]=$APPNAME$-i importfilter
 Name[fr]=Filtre d'importation de $APPNAME$
+Name[hi]=$APPNAME$ आयात फिल्टर
 Name[hu]=$APPNAME$ importszűrő
 Name[it]=Filtro di importazione per $APPNAME$
 Name[nl]=$APPNAME$ importfilter
+Name[pl]=$APPNAME$: filtr do importowania
 Name[pt]=Filtro de Importação do $APPNAME$
 Name[pt_BR]=Filrto de Importação do $APPNAME$
 Name[ru]=$APPNAME$ фильтр импорта
 Name[sl]=Uvozni filter $APPNAME$
 Name[sr]=$APPNAME$ увозни филтер
+Name[sr@Latn]=$APPNAME$ uvozni filter
 Name[sv]=$APPNAME$ importfilter
 Name[ta]=$APPNAME$  இறக்குமதி வடிகட்டி
 Name[xx]=xx$APPNAME$ Import Filterxx
