--- a/languages/cpp/app_templates/kcmodule/module.desktop
+++ b/languages/cpp/app_templates/kcmodule/module.desktop
@@ -20,13 +20,16 @@ Comment[de]=$APPNAME$ - ein KControl-Modul
 Comment[es]=$APPNAME$ - un módulo de kcontrol
 Comment[et]=$APPNAME$ - KDE juhtimiskeskuse moodul
 Comment[fr]=$APPNAME$ - un module externe du centre de configuration de KDE.
+Comment[hi]=$APPNAME$ - के-कंट्रोल मॉड्यूल
 Comment[hu]=$APPNAME$ - bővítőmodul a Vezérlőközponthoz
 Comment[it]=$APPNAME$ - un modulo per kcontrol
 Comment[nl]=$APPNAME$ - een kcontrol-module
+Comment[pl]=$APPNAME$ - moduł kcontrol
 Comment[pt]=$APPNAME$ - um módulo do kcontrol
 Comment[pt_BR]=$APPNAME$ - um módulo do kcontrol
 Comment[ru]=$APPNAME$ - модуль kcontrol
 Comment[sr]=$APPNAME$ — kcontrol модул
+Comment[sr@Latn]=$APPNAME$ — kcontrol modul
 Comment[sv]=$APPNAME$ - en modul i Inställningscentralen
 Comment[ta]=$APPNAME$ - ஒரு கட்டுப்பாடுக் கூறு 
 Comment[xx]=xx$APPNAME$ - a kcontrol modulexx
@@ -41,13 +44,16 @@ Name[de]=Miniprogramm $APPNAME$
 Name[es]=El applet $APPNAME$
 Name[et]=$APPNAME$ aplett
 Name[fr]=L'applet $APPNAME$
+Name[hi]= $APPNAME$ एप्लेट
 Name[hu]=$APPNAME$ kisalkalmazás
 Name[it]=Applet di $APPNAME$
 Name[nl]=De $APPNAME$ applet
+Name[pl]=Aplet $APPNAME$
 Name[pt]='Applet' $APPNAME$
 Name[pt_BR]=O applet $APPNAME$
 Name[ru]=Аплет $APPNAME$
 Name[sr]=$APPNAME$ аплет
+Name[sr@Latn]=$APPNAME$ aplet
 Name[sv]=Miniprogram $APPNAME$
 Name[ta]=$APPNAME$ ஆப்லட்
 Name[xx]=xxThe $APPNAME$ appletxx
