--- a/languages/cpp/app_templates/kfileplugin/kfile_plugin.desktop
+++ b/languages/cpp/app_templates/kfileplugin/kfile_plugin.desktop
@@ -6,13 +6,16 @@ Name[ca]=Informació $APPNAME$
 Name[de]=$APPNAME$-Information
 Name[es]=Información de $APPNAME$
 Name[et]=$APPNAME$ info
+Name[hi]=$APPNAME$ इन्फो
 Name[hu]=$APPNAME$ jellemzői
 Name[it]=Informazioni su $APPNAME$
 Name[nl]=Info over $APPNAME$
+Name[pl]=$APPNAME$ - informacje
 Name[pt]=Informação do $APPNAME$
 Name[pt_BR]=Informações de $APPNAME$
 Name[ru]=Информация о $APPNAME$
 Name[sr]=$APPNAME$ информације
+Name[sr@Latn]=$APPNAME$ informacije
 Name[sv]=$APPNAME$ information
 Name[xx]=xx$APPNAME$ Infoxx
 Name[zh_CN]=$APPNAME$的信息
