--- a/languages/java/kdevjavasupport.desktop
+++ b/languages/java/kdevjavasupport.desktop
@@ -9,19 +9,23 @@ Comment[de]=Java-Sprachunterstützung für KDevelop
 Comment[es]=Soporte para Java
 Comment[et]=Java toetus
 Comment[fr]=Un module externe pour la gestion du langage JAVA.
+Comment[hi]=जावा समर्थन
 Comment[hu]=Java-támogatás
 Comment[it]=Supporto per Java
 Comment[nl]=Ondersteuning voor Java
+Comment[pl]=Obsługa Javy
 Comment[pt]=Suporte a Java
 Comment[pt_BR]=Suporte ao Java
 Comment[ru]=Поддержка языка Java
 Comment[sr]=Подршка за Java-у
+Comment[sr@Latn]=Podrška za Java-u
 Comment[sv]=Java-stöd
 Comment[ta]=ஜாவா ஆதரவு
 Comment[xx]=xxJava Supportxx
 Comment[zh_CN]=Java语言支持
 Name=KDevJavaSupport
 Name[de]=Java-Unterstützung (KDevelop)
+Name[pl]=KDevObsługaJavy
 Name[sv]=KDevelop Java-stöd
 Name[ta]=கெடெவ் ஜாவா ஆதரவு
 Name[xx]=xxKDevJavaSupportxx
@@ -32,13 +36,16 @@ GenericName[de]=Java-Unterstützung
 GenericName[es]=Soporte para Java
 GenericName[et]=Java toetus
 GenericName[fr]=Langage JAVA.
+GenericName[hi]=जावा समर्थन
 GenericName[hu]=Java-támogatás
 GenericName[it]=Supporto Java
 GenericName[nl]=Ondersteuning voor Java
+GenericName[pl]=Obsługa Javy
 GenericName[pt]=Suporte a Java
 GenericName[pt_BR]=Suporte ao Java
 GenericName[ru]=Поддержка языка Java
 GenericName[sr]=Подршка за Java-у
+GenericName[sr@Latn]=Podrška za Java-u
 GenericName[sv]=Java-stöd
 GenericName[ta]=ஜாவா ஆதரவு
 GenericName[xx]=xxJava Supportxx
