--- a/parts/closer/kdevpart_closer.desktop
+++ b/parts/closer/kdevpart_closer.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour fermer les fenêtres sélectionnées.
 Comment[hu]=Objektum a kijelölt ablakok bezárásához
 Comment[it]=Part per chiudere le finestre selezionate
 Comment[nl]=Onderdeel voor het sluiten van geselecteerde vensters
+Comment[pl]=Program do zamykania wybranych okien
 Comment[pt]=Componente para fechar as janelas seleccionadas
 Comment[pt_BR]=Parte para fechar janelas selecionadas
 Comment[ru]=Модуль для закрытия выбранных из списка окон
 Comment[sr]=Део за затварање изабраних прозора
+Comment[sr@Latn]=Deo za zatvaranje izabranih prozora
 Comment[sv]=Del för att stänga valda fönster
 Comment[ta]=முடுவதற்காக தேர்வுசெய்த சாலறத்தில் ஒரு பகுதி
 Comment[xx]=xxPart for closing selected windowsxx
 Comment[zh_CN]=关闭已选择窗口的模块
 Name=KDevcloser
 Name[de]=Fensterschließer (KDevelop)
+Name[pl]=KDevzamykanie
 Name[sv]=KDevelop stängning
 Name[xx]=xxKDevcloserxx
 GenericName=Window Closer
@@ -31,14 +34,17 @@ GenericName[de]=Fensterschließer
 GenericName[es]=Cierre de ventanas
 GenericName[et]=Akna sulgeja
 GenericName[fr]=Fermeture des fenêtres
+GenericName[hi]=विंडो चूसर
 GenericName[hu]=ablakbezáró
 GenericName[it]=Chiudi finestra
 GenericName[nl]=Venstersluiter
+GenericName[pl]=Zamykanie okien
 GenericName[pt]=Fechador de Janelas
 GenericName[pt_BR]=Fechador de Janela
 GenericName[ru]=Закрытие выбранных окон
 GenericName[sl]=Zapiralnik okna
 GenericName[sr]=Затварач прозора
+GenericName[sr@Latn]=Zatvarač prozora
 GenericName[sv]=Fönsterstängning
 GenericName[ta]=சாளரம் மூடுபவர்
 GenericName[xx]=xxWindow Closerxx
