--- a/parts/fileview/kdevfileview.desktop
+++ b/parts/fileview/kdevfileview.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe pour la gestion des arborescences de fichiers qui 
 Comment[hu]=Lehetővé teszi az aktuális projekthez tartozó forrásfájlok áttekintését, kezelését
 Comment[it]=Offre una via per navigare e interagire con il file sorgente del progetto attuale.
 Comment[nl]=Handig bladeren en zoeken in de broncode-bestanden van het huidige project.
+Comment[pl]=Umożliwia metodę nawigacji i interacji z plikami źródłowymi bieżącego projektu.
 Comment[pt]=Oferece uma forma de navegar e de interagir com os ficheiros de código do projecto actual.
 Comment[pt_BR]=Fornece uma maneira de navegar e interagir com arquivos fonte do projeto atual.
 Comment[ru]=Предоставляет способ навигации и взаимодействия с исходными файлами в каталоге текущего проекта.
 Comment[sr]=Обезбеђује начин навигације и рада са фајловима изворног кôда текућег пројекта.
+Comment[sr@Latn]=Obezbeđuje način navigacije i rada sa fajlovima izvornog kôda tekućeg projekta.
 Comment[sv]=Erbjuder ett sätt att navigera och arbeta med källkodsfilerna i det aktuella projektet.
 Comment[ta]=நடப்பு திட்ட பணியில் உள்ள மூல கோப்பிற்க்கு வழி செலுத்த மற்றும் உறையாட இது வழி செலுத்தும்.
 Comment[xx]=xxProvides a way of navigating and interacting with the source files of the current project.xx
 Comment[zh_CN]=提供当前项目源文件的浏览和相互关系。
 Name=KDevFileView
 Name[de]=Dateibaum (KDevelop)
+Name[pl]=KDevWidokPliku
 Name[sv]=KDevelop filvisning
 Name[ta]=KDev கோப்பு காட்சி
 Name[xx]=xxKDevFileViewxx
@@ -32,13 +35,16 @@ GenericName[de]=Dateibaum
 GenericName[es]=Árbol de archivos
 GenericName[et]=Failipuu
 GenericName[fr]=Arborescences de fichiers
+GenericName[hi]=फाइल ट्री
 GenericName[hu]=fájl-fa
 GenericName[it]=Albero file
 GenericName[nl]=Bestandsboomstructuur
+GenericName[pl]=Drzewo plików
 GenericName[pt]=Árvore de Ficheiros
 GenericName[pt_BR]=Árvore de Arquivo
 GenericName[ru]=Дерево файлов
 GenericName[sr]=Дрво фајлова
+GenericName[sr@Latn]=Drvo fajlova
 GenericName[sv]=Filträd
 GenericName[ta]=கோப்பு மரம்
 GenericName[xx]=xxFile Treexx
