--- a/parts/fullscreen/kdevpart_fullscreen.desktop
+++ b/parts/fullscreen/kdevpart_fullscreen.desktop
@@ -8,19 +8,23 @@ Comment[da]=Fuldskærm
 Comment[de]=Vollbild
 Comment[es]=Pantalla completa
 Comment[fr]=Un module externe pour la gestion du plein écran.
+Comment[hi]=फुल-स्क्रीन
 Comment[hu]=Teljes képernyős
 Comment[it]=Schermo pieno
 Comment[nl]=Volledig scherm
+Comment[pl]=Pełny ekran
 Comment[pt]=Todo o Ecrã
 Comment[pt_BR]=Tela Cheia
 Comment[ru]=Полноэкранный режим
 Comment[sr]=Преко целог екрана
+Comment[sr@Latn]=Preko celog ekrana
 Comment[sv]=Fullskärm
 Comment[ta]=முழுத்திரை
 Comment[xx]=xxFullScreenxx
 Comment[zh_CN]=全屏
 Name=KDevFullScreen
 Name[de]=Vollbild (KDevelop)
+Name[pl]=KDevPełnyEkran
 Name[sv]=KDevelop fullskärm
 Name[ta]=KDev முழுத்திரை
 Name[xx]=xxKDevFullScreenxx
@@ -34,10 +38,12 @@ GenericName[fr]=Gestion du plein écran
 GenericName[hu]=teljes képernyős
 GenericName[it]=Schermo pieno
 GenericName[nl]=Volledig scherm
+GenericName[pl]=Pełny ekran
 GenericName[pt]=Todo o Ecrã
 GenericName[pt_BR]=Tela Cheia
 GenericName[ru]=Полноэкранный режим
 GenericName[sr]=Преко целог екрана
+GenericName[sr@Latn]=Preko celog ekrana
 GenericName[sv]=Fullskärm
 GenericName[ta]=முழுத்திரை
 GenericName[xx]=xxFullScreenxx
