--- a/vcs/cvsservice/kdevcvsservice.desktop
+++ b/vcs/cvsservice/kdevcvsservice.desktop
@@ -12,10 +12,12 @@ Comment[fr]=Un module externe pour l'intégration du service CVS via le programm
 Comment[hu]=CVS-integráció a Cervisia cvsservice segítségével (KDE 3.2-től) http://www.kde.org/apps/cervisia/
 Comment[it]=Integrazione CVS utilizzando il cvsservice di Cervisia (richiede KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[nl]=CVS-integratie via Cervisia's cvsservice (alleen KDE 3.2). Zie http://www.kde.org/apps/cervisia/
+Comment[pl]=Integracja z CVS-em za pomocą usługi CVS Cervisii (potrzebne KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[pt]=A integração do CVS usando o serviço de CVS do Cervisia (necessita do KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia (precisa do KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[ru]=Интеграция CVS с использованием Cervisia cvsservice (требует KDE 3.2). http://www.kde.org/apps/cervisia/
 Comment[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice (захтева KDE 3.2) http://www.kde.org/apps/cervisia/
+Comment[sr@Latn]=Integracija CVS-a koristeći Cervisia-jin cvsservice (zahteva KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst (kräver KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[ta]=cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/ உபயோகித்து CVS ஒருங்கினைப்பு 
 Comment[xx]=xxCVS Integration using Cervisia's cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/xx
@@ -24,6 +26,8 @@ Name=CvsService
 Name[ca]=Servei de CVS
 Name[de]=CVSService-Unterstützung (KDevelop)
 Name[el]=Cvs υπηρεσία
+Name[hi]=सीवीएस-सर्विस
+Name[pl]=Usługa Cvs
 Name[sr]=CvsServicе
 Name[sv]=CVS-tjänst
 Name[ta]=Cvs சேவை
@@ -38,10 +42,12 @@ GenericName[fr]=Intégration du service CVS
 GenericName[hu]=CVS-integráció a Cervisia cvsservice-en keresztül
 GenericName[it]=Integrazione CVS tramite cvsservice di Cervisia
 GenericName[nl]=CVS-integratie via Cervisia's cvsservice
+GenericName[pl]=Integracja z CVS-em za pomocą usługi CVS Cervisii
 GenericName[pt]=Integração com o CVS usando o cvsservice do Cervisia
 GenericName[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia
 GenericName[ru]=Интеграция CVS с использованием Cervisia cvsservice
 GenericName[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice
+GenericName[sr@Latn]=Integracija CVS-a koristeći Cervisia-jin cvsservice
 GenericName[sv]=Integrering av CVS med Cervisiatjänst
 GenericName[ta]=Cervisia's cvsservice உபயோகித்து CVS ஒருங்கினைப்பு 
 GenericName[xx]=xxCVS Integration using Cervisia's cvsservicexx
