--- a/vcs/subversion/kdevpart_subversion.desktop
+++ b/vcs/subversion/kdevpart_subversion.desktop
@@ -4,6 +4,7 @@ Type=Service
 Exec=blubb
 Comment=Subversion
 Comment[es]=Subversión
+Comment[hi]=सबवर्सन
 Comment[pt_BR]=Subversão
 Comment[ru]=Интеграция Subversion
 Comment[sl]=Podrazličica
@@ -12,12 +13,14 @@ Comment[ta]=உப பதிப்பு
 Comment[xx]=xxSubversionxx
 Name=KDevsubversion
 Name[de]=Subversion-Unterstützung (KDevelop)
+Name[hi]=के-डेव-सबवर्सन
 Name[sv]=KDevelop delversion
 Name[ta]=kdev உப பதிப்பு
 Name[xx]=xxKDevsubversionxx
 GenericName=Subversion
 GenericName[de]=Subversion-Unterstützung
 GenericName[es]=Subversión
+GenericName[hi]=सबवर्सन
 GenericName[pt_BR]=Subversão
 GenericName[ru]=Интеграция Subversion
 GenericName[sl]=Podrazličica
