--- a/languages/cpp/app_templates/kdevlang/kdevlang.desktop
+++ b/languages/cpp/app_templates/kdevlang/kdevlang.desktop
@@ -5,6 +5,7 @@ Exec=blubb
 Comment=$APPNAME$
 Comment[xx]=xx$APPNAME$xx
 Name=KDev$APPNAME$
+Name[hi]=के-डेव$APPNAME$
 Name[sv]=KDevelop $APPNAME$
 Name[ta]=கெடெவ் $APPNAME$
 Name[xx]=xxKDev$APPNAME$xx
