--- a/languages/cpp/app_templates/kscreensaver/kscreensaver.desktop
+++ b/languages/cpp/app_templates/kscreensaver/kscreensaver.desktop
@@ -14,13 +14,16 @@ Comment[el]=Μια προφύλαξη οθόνης του KDE
 Comment[es]=Un salvapantallas de KDE
 Comment[et]=KDE ekraanisäästja
 Comment[fr]=Un économiseur d'écran pour KDE.
+Comment[hi]=केडीई स्क्रीन सेवर
 Comment[hu]=KDE képernyővédő
 Comment[it]=Uno screensaver per KDE
 Comment[nl]=Een KDE-screensaver
+Comment[pl]=Wygaszacz ekranu KDE
 Comment[pt]=Um protector de ecrã do KDE
 Comment[pt_BR]=Um Protetor de Tela do KDE
 Comment[ru]=Хранитель экрана KDE
 Comment[sr]=KDE-ов чувар екрана
+Comment[sr@Latn]=KDE-ov čuvar ekrana
 Comment[sv]=En skärmsläckare för KDE
 Comment[ta]=A KDE திரைக் காப்பு 
 Comment[xx]=xxA KDE Screen Saverxx
