--- a/languages/cpp/compiler/gccoptions/kdevg77options.desktop
+++ b/languages/cpp/compiler/gccoptions/kdevg77options.desktop
@@ -11,16 +11,20 @@ Comment[fr]=Compilateur pour Fortran 77 du GNU.
 Comment[hu]=GNU Fortran 77 fordítóprogram
 Comment[it]=Compilatore per GNU Fortran 77
 Comment[nl]=GNU Fortran 77-compiler
+Comment[pl]=Kompilator GNU Fortran 77
 Comment[pt]=Compilador GNU Fortran 77
 Comment[pt_BR]=Compilador GNU Fortran 77
 Comment[ru]=Компилятор GNU Fortran 77
 Comment[sr]=GNU-ов Fortran 77 компајлер
+Comment[sr@Latn]=GNU-ov Fortran 77 kompajler
 Comment[sv]=GNU Fortran 77-compilator
 Comment[ta]=GNU Fortran 77 தொகுப்பி
 Comment[xx]=xxGNU Fortran 77 Compilerxx
 Comment[zh_CN]=GNU Fortran 77编译器
 Name=G77Options
 Name[de]=G77-Einstellungen (KDevelop)
+Name[hi]=जी77विकल्प
+Name[pl]=Opcje G77
 Name[sv]=Alternativ för g77
 Name[ta]=G77விருப்பத்தேர்வுகள் 
 Name[xx]=xxG77Optionsxx
