--- a/languages/cpp/compiler/gccoptions/kdevgppoptions.desktop
+++ b/languages/cpp/compiler/gccoptions/kdevgppoptions.desktop
@@ -11,16 +11,20 @@ Comment[et]=GNU C++ kompilaator
 Comment[fr]=Compilateur C++ du GNU.
 Comment[hu]=GNU C++ fordítóprogram
 Comment[it]=Compilatore GNU C++
+Comment[pl]=Kompilator GNU C++
 Comment[pt]=Compilador GNU C++
 Comment[pt_BR]=Compilador GNU C++
 Comment[ru]=Компилятор GNU C++
 Comment[sr]=GNU-ов C++ компајлер
+Comment[sr@Latn]=GNU-ov C++ kompajler
 Comment[sv]=GNU C++ kompilator
 Comment[ta]=GNU C++தொகுப்பி
 Comment[xx]=xxGNU C++ Compilerxx
 Comment[zh_CN]=GNU C++编译器
 Name=GppOptions
 Name[de]=GPP-Einstellungen (KDevelop)
+Name[hi]=जीपीपी-विकल्प
+Name[pl]=Opcje Gpp
 Name[sv]=Alternativ för g++
 Name[ta]=Gppவிருப்பத்தேர்வுகள் 
 Name[xx]=xxGppOptionsxx
