--- a/lib/interfaces/kdevelopplugin.desktop
+++ b/lib/interfaces/kdevelopplugin.desktop
@@ -9,12 +9,15 @@ Name[de]=KDevelop-Plugin
 Name[es]=Extensión de KDevelop
 Name[et]=KDevelopi plugin
 Name[fr]=Module externe de KDevelop
+Name[hi]=के-डेवलप प्लगइन
 Name[hu]=KDevelop-bővítőmodul
 Name[it]=Plugin di KDevelop
+Name[pl]=Wtyczka do KDevelopa
 Name[pt]='Plugin' do KDevelop
 Name[pt_BR]=Plugin do KDevelop
 Name[ru]=Модуль KDevelop
-Name[sr]=KDevelop-ов додатак
+Name[sr]=KDevelop-ов прикључак
+Name[sr@Latn]=KDevelop-ov priključak
 Name[sv]=KDevelop insticksmodul
 Name[ta]=KDevelop  சொருகு
 Name[xx]=xxKDevelop Pluginxx
