--- a/parts/appwizard/common/kde-part.desktop
+++ b/parts/appwizard/common/kde-part.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=$APPNAME$Part
 Name[et]=$APPNAME$ komponent
+Name[hi]=$APPNAME$पार्ट
 Name[sv]=$APPNAME$-del
 Name[ta]=$APPNAME$பாகம்
 Name[xx]=xx$APPNAME$Partxx
