--- a/vcs/cvsclient/kdevcvs.desktop
+++ b/vcs/cvsclient/kdevcvs.desktop
@@ -12,16 +12,19 @@ Comment[fr]=Un module externe qui gère le programme « CVS » pour la gestion d
 Comment[hu]=A CVS egy dokumentumkezelő rendszer, mely lehetővé teszi programok többféle verziójának kezelését, a módosítások nyomonkövetését. http://www.cvshome.org/
 Comment[it]=CVS è un sistema per il controllo di versione, il quale permette di mantenere le vecchie versioni dei file, tenere un registro di chi, quando e perché sono apparsi cambiamenti. http://www.cvshome.org/
 Comment[nl]=CVS is een systeem voor versiebeheer dat bestanden bewaart en een log bijhoudt van wie waarom en wanneer welke bestanden wijzigde. Zie http://www.cvshome.org/
+Comment[pl]=CVS to system kontroli wersji, który umożliwia przechowywanie starych wersji plików, informacji kto, kiedy i dlaczego dokonał zmian. http://www.cvshome.org/
 Comment[pt]=O CVS é um sistema de controlo de versões, o qual lhe permite manter versões anteriores dos ficheiros, um registo de quem, quando e porque foram feitas alterações. http://www.cvshome.org/
 Comment[pt_BR]=CVS é um sistema de controle de versão, que lhe permite manter versões antigas dos arquivo, manter um registro de quem, quando e porque mudanças ocorreram. http://www.cvshome.org/
 Comment[ru]=CVS - это система управления версиями, которая позволяет хранить старые версии файлов, а также историю их изменения. http://www.cvshome.org/
 Comment[sr]=CVS је систем за контролу верзија, који вам омогућава да задржите старе верзије фајлова, да одржавате дневник о томе ко, када и зашто су се промене десиле. http://www.cvshome.org/
+Comment[sr@Latn]=CVS je sistem za kontrolu verzija, koji vam omogućava da zadržite stare verzije fajlova, da održavate dnevnik o tome ko, kada i zašto su se promene desile. http://www.cvshome.org/
 Comment[sv]=CVS är ett versionskontrollsystem, som låter dig behålla gamla versioner av filer, och föra en logg över vem, när och varför ändringar sker. http://www.cvshome.org/
 Comment[ta]=CVS இயக்கத்தை அமைக்கும் பதிப்பு,பழைய பதிப்பு கோப்புகளை வைக்க உதவும்,மாற்றங்களை செய்தது யார்,எப்பொ மற்றும் ஏன் என்பதை வைத்து கொள்ளும். http://www.cvshome.org/
 Comment[xx]=xxCVS is a version control system, which allows you to keep old versions of files, keep a log of who, when, and why changes occurred. http://www.cvshome.org/xx
 Comment[zh_CN]=CVS是一个版本控制系统，允许保存旧的文件，记录谁在什么时间为什么做了改变。http://www.cvshome.org/
 Name=CVS
 Name[de]=CVS-Unterstützung (KDevelop)
+Name[hi]=सीवीएस
 Name[xx]=xxCVSxx
 GenericName=CVS Integration
 GenericName[ca]=Integració amb CVS
@@ -29,14 +32,17 @@ GenericName[de]=CVS-Unterstützung
 GenericName[es]=Integración con CVS
 GenericName[et]=CVS põimimine
 GenericName[fr]=Intégration de CVS
+GenericName[hi]=सीवीएस इंटीग्रेशन
 GenericName[hu]=CVS-integráció
 GenericName[it]=Integratione CVS
 GenericName[nl]=CVS-integratie
+GenericName[pl]=Integracja z CVS-em
 GenericName[pt]=Integração com CVS
 GenericName[pt_BR]=Integração com o CVS
 GenericName[ru]=Интеграция CVS
 GenericName[sl]=Integracija CVS
 GenericName[sr]=Интеграција CVS-а
+GenericName[sr@Latn]=Integracija CVS-a
 GenericName[sv]=Integrering av CVS
 GenericName[ta]=CVS ஒருங்கினை
 GenericName[xx]=xxCVS Integrationxx
