--- a/buildtools/custommakefiles/kdevcustomproject.rc
+++ b/buildtools/custommakefiles/kdevcustomproject.rc
@@ -11,5 +11,11 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
+<ToolBar name="buildToolBar">
+    <Action name="build_build" group="build_operations" />
+    <Action name="build_compilefile" group="build_operations" />
+    <Separator/>
+    <Action name="build_execute" group="build_operations" />
+</ToolBar>
 </kpartgui>
 
