- Changing wx project name to new one, wxWidgets.

--- a/languages/cpp/app_templates/wxhello/app.desktop
+++ b/languages/cpp/app_templates/wxhello/app.desktop
@@ -5,20 +5,21 @@ Name[xx]=xx$APPNAME$xx
 Exec=$APPNAMELC$
 Icon=$APPNAMELC$
 Type=Application
-Comment=A simple wxWindows Application
-Comment[ca]=Una simple aplicació wxWindows
-Comment[da]=Et simpelt wxWindows program
-Comment[de]=Eine einfache wxWindows-Anwendung
-Comment[es]=Una aplicación wxWindows sencilla
-Comment[et]=Lihtne wxWindows rakendus
-Comment[fr]=Une application wxWindows simple.
-Comment[hu]=Egyszerű wxWindows-alkalmazás
-Comment[it]=Una semplice applicazione wxWindows
-Comment[nl]=Een eenvoudige wxWindows-toepassing
-Comment[pt]=Uma aplicação wxWindows
-Comment[pt_BR]=Um simples Aplicativo wxWindows
-Comment[ru]=Простое приложение wxWindows
-Comment[sr]=Једноставан wxWindows програм
-Comment[sv]=Ett enkelt wxWindows-program
-Comment[xx]=xxA simple wxWindows Applicationxx
-Comment[zh_CN]=一个简单的wxWindows应用程序
+Comment=A simple wxWidgets Application
+Comment[ca]=Una simple aplicació wxWidgets
+Comment[da]=Et simpelt wxWidgets program
+Comment[de]=Eine einfache wxWidgets-Anwendung
+Comment[es]=Una aplicación wxWidgets sencilla
+Comment[et]=Lihtne wxWidgets rakendus
+Comment[fr]=Une application wxWidgets simple.
+Comment[hu]=Egyszerű wxWidgets-alkalmazás
+Comment[it]=Una semplice applicazione wxWidgets
+Comment[nl]=Een eenvoudige wxWidgets-toepassing
+Comment[pt]=Uma aplicação wxWidgets
+Comment[pt_BR]=Um simples Aplicativo wxWidgets
+Comment[ru]=Простое приложение wxWidgets
+Comment[sr]=Једноставан wxWidgets програм
+Comment[sv]=Ett enkelt wxWidgets-program
+Comment[ta]=சாதாரண wxWidgets பயன்பாடு
+Comment[xx]=xxA simple wxWidgets Applicationxx
+Comment[zh_CN]=一个简单的wxWidgets应用程序
