--- a/languages/cpp/doc/Makefile.am
+++ b/languages/cpp/doc/Makefile.am
@@ -1,6 +1,6 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
 toc_DATA = libc.toc libstdc++.toc stl.toc qt-kdev3.toc kde2book.toc \
-	gnustep.toc gnome1.toc clanlib.toc c++_bugs_gcc.toc gtk_bugs.toc wxwindows_bugs.toc
+	gnustep.toc gnome1.toc clanlib.toc c++_bugs_gcc.toc gtk_bugs.toc wxwidgets_bugs.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = libc.index libstdc++.index stl.index kde2book.index
