--- a/languages/cpp/app_templates/kateplugin2/plugin.desktop
+++ b/languages/cpp/app_templates/kateplugin2/plugin.desktop
@@ -14,11 +14,13 @@ Name[fr]=Mon premier module externe pour Kate.
 Name[hu]=Mintapélda Kate-bővítőmodulra
 Name[it]=Il mio primo plugin di Kate
 Name[nl]=Mijn eerste Kate-plugin
+Name[pl]=Moja pierwsza wtyczka do Kate
 Name[pt]=O meu primeiro 'plugin' para o Kate
 Name[pt_BR]=Meu primeiro Plugin do Kate
 Name[ru]=Мой первый модуль к Kate
 Name[sl]=Moj prvi vstavek za Kate
-Name[sr]=Мој први додатак за Kate
+Name[sr]=Мој први прикључак за Kate
+Name[sr@Latn]=Moj prvi priključak za Kate
 Name[sv]=Mitt första insticksprogram för Kate
 Name[ta]=என் முதல் கெட் சொருகு
 Name[xx]=xxMy first Kate Pluginxx
@@ -34,11 +36,13 @@ Comment[fr]=La description courte de votre module
 Comment[hu]=Itt lehet egy rövid leírást adni a bővítőmodulról
 Comment[it]=La tua breve descrizione sui plugin va qui
 Comment[nl]=Hier kunt u een korte omschrijving opgeven
-Comment[pt]=A sua descrição do 'plugin' aqui
+Comment[pl]=Tu powinien się pojawić krótki opis wtyczki
+Comment[pt]=Aqui deverá colocar uma descrição do 'plugin'
 Comment[pt_BR]=Sua descrição sumária sobre o plugin vai aqui
 Comment[ru]=Здесь располагается краткое описание модуля
 Comment[sl]=Tukaj je kratek opis o vstavku
-Comment[sr]=Овде иде ваш кратак опис додатка
+Comment[sr]=Овде иде ваш кратак опис прикључка
+Comment[sr@Latn]=Ovde ide vaš kratak opis priključka
 Comment[sv]=En kort beskrivningen av vad insticksprogrammet gör
 Comment[ta]=உங்கள் சொருகின் சிறு விவரம் இங்கிருக்கும்
 Comment[xx]=xxYour short description about the plugin goes herexx
