--- a/languages/kjssupport/kdevkjssupport.rc
+++ b/languages/kjssupport/kdevkjssupport.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevBashSupport" version="1">
+<kpartgui name="KDevkjsSupport" version="1">
 <MenuBar>
   <Menu name="build" >
     <Action name="build_execute" />
