--- a/languages/cpp/app_templates/khello/app.desktop
+++ b/languages/cpp/app_templates/khello/app.desktop
@@ -13,14 +13,17 @@ Comment[el]=Μια απλή εφαρμογή του KDE
 Comment[es]=Una aplicación de KDE sencilla
 Comment[et]=Lihtne KDE rakendus
 Comment[fr]=Une application simple pour KDE.
+Comment[hi]=एक सादा केडीई अनुप्रयोग
 Comment[hu]=Egyszerű KDE-alkalmazás
 Comment[it]=Una semplice applicazione KDE
 Comment[nl]=Een eenvoudige KDE-toepassing
-Comment[pt]=Uma aplicação KDE simples
+Comment[pl]=Prosta aplikacja KDE
+Comment[pt]=Uma aplicação simples do KDE
 Comment[pt_BR]=Um simples Aplicativo do KDE
 Comment[ru]=Простое приложение KDE
 Comment[sl]=Preprost program za KDE
 Comment[sr]=Једноставан KDE програм
+Comment[sr@Latn]=Jednostavan KDE program
 Comment[sv]=Ett enkelt KDE-program
 Comment[ta]=ஒரு சாஅதரன கெடி பயன்பாடு
 Comment[xx]=xxA simple KDE Applicationxx
