--- a/languages/cpp/app_templates/khello2/app.desktop
+++ b/languages/cpp/app_templates/khello2/app.desktop
@@ -9,14 +9,22 @@ Comment=A simple KDE Application
 Comment[ca]=Una simple aplicació KDE
 Comment[da]=Et simpelt KDE program
 Comment[de]=Eine einfache KDE-Anwendung
+Comment[el]=Μια απλή εφαρμογή του KDE
 Comment[es]=Una aplicación de KDE sencilla
 Comment[et]=Lihtne KDE rakendus
 Comment[fr]=Une application simple pour KDE.
+Comment[hi]=एक सादा केडीई अनुप्रयोग
 Comment[hu]=Egyszerű KDE-alkalmazás
 Comment[it]=Una semplice applicazione KDE
-Comment[pt]=Uma aplicação KDE simples
+Comment[nl]=Een eenvoudige KDE-toepassing
+Comment[pl]=Prosta aplikacja KDE
+Comment[pt]=Uma aplicação simples do KDE
 Comment[pt_BR]=Um simples Aplicativo do KDE
+Comment[ru]=Простое приложение KDE
 Comment[sl]=Preprost program za KDE
-Comment[sr]=Проста KDE-ова апликација
+Comment[sr]=Једноставан KDE програм
+Comment[sr@Latn]=Jednostavan KDE program
 Comment[sv]=Ett enkelt KDE-program
+Comment[ta]=ஒரு சாஅதரன கெடி பயன்பாடு
 Comment[xx]=xxA simple KDE Applicationxx
+Comment[zh_CN]=一个简单的KDE应用程序
