Display the exit status messages (eg. Success). Might need to be backported. "Fix" --enable-final compilation in languages/ada.
CCMAIL: kdevelop-devel@kdevelop.org

--- a/languages/ada/Makefile.am
+++ b/languages/ada/Makefile.am
@@ -35,3 +35,5 @@ service_DATA = kdevadasupport.desktop
 
 rcdir = $(kde_datadir)/kdevadasupport
 rc_DATA = kdevadasupport.rc
+
+KDE_OPTIONS = nofinal
